fix alignment and border menu

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -99,7 +99,7 @@ li.font-content {
 .menu {
   color: _palette(_katz-primary);
   background-color: _palette(_katz-secondary);
-  border: 10px solid _palette(_katz-primary);
+  border: 10px solid _palette(_katz-secondary);
   position: relative;
   width: 100%;
   height: 100vh;
@@ -148,6 +148,7 @@ li.font-content {
     height: 30px;
     background-size: contain;
     padding-right: 30px;
+    margin-top: 3px;
   }
   @include respond-to(md) {
     width: 60px;
@@ -159,6 +160,9 @@ li.font-content {
   right: 20px;
   top: 58px;
   @include respond-to(sm) {
+    top: 14px;
+  }
+  @include respond-to(md) {
     top: 19px;
   }
 }
